# ollama

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: release.yaml  test.yaml
discover/: gpu.go  gpu_info.h  gpu_info_sycl.c  gpu_info_sycl.h  gpu_linux.go  gpu_sycl.go  gpu_test.go  gpu_windows.go  types.go
docs/: gpu.md  intel_gpu.md  linux.md
envconfig/: config.go
llama/patches/: 0016-update-for-intel-gpu.patch  0030_sycl.patch
llm/: server.go
ml/backend/ggml/: commit.txt
ml/backend/ggml/ggml/src/: ggml-backend-reg.cpp  ggml.go
ml/backend/ggml/ggml/src/ggml-sycl/: common.hpp  ggml-sycl.cpp
scripts/: build_docker.sh  build_linux.sh  env.sh  install.sh  local_install.sh  tag_latest.sh  uninstall.sh
